[workspace]
members = [
  "crates/mm-cli",
]

resolver = "3"

[workspace.package]
authors = ["Workoss <workoss@icloud.com>"]
categories = ["Development Tools"]
description = "mm tools"
edition = "2024"
homepage = "https://github.com/workoss"
keywords = ["mm", "tools"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Workoss/mm-dev"
version = "0.1.0"

[workspace.dependencies]
anyhow = {version = "1.0"}
async-trait = {version = "0.1"}
auth-git2 = {version = "0.5"}
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["derive", "wrap_help"]}
clap_complete = "4"
crossterm = {version = "0.29"}
dirs = "6"
futures = {version = "0.3", features = ["thread-pool"]}
git2 = {version = "0.20"}
inquire = {version = "0.7", features = ["date", "editor", "tempfile"]}
log = "0.4"
magika = {version = "0.1", features = ["serde"]}
semver = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = {version = "2.0", features = ["derive"]}
tokio = {version = "1.44", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
ureq = {version = "3.0", features = ["socks-proxy", "charset"]}

[package]
authors.workspace = true
categories.workspace = true
description = "mm-dev"
documentation = "https://docs.rs/mm-dev"
edition.workspace = true
license.workspace = true
name = "mm-dev"
publish = false
repository.workspace = true
version.workspace = true

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

single_range_in_vec_init = "allow"

style = {level = "allow", priority = -1}

[dev-dependencies]
predicates = "3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
# rustflags = ["-Zthreads=8"] # Better compile performance.            

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
debug = false # Disables debug information.
incremental = false # Disables incremental compilation.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
# rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.            
strip = true # Ensures debug symbols are removed.
# trim-paths = "all" # Removes potentially privileged information from your binaries.
